# SpellForge

./: .gitignore  .secrets.baseline  CLAUDE.md  README.md  eslint.config.js  pyproject.toml  requirements.txt  spellforge.py
.claude/: settings.local.json
.claude/hooks/: post_edit.sh
docs/: as-built-project-guide.md  as-built.md  prd.md  project-guide-instructions.md  project-guide.md
tests/: __init__.py  conftest.py  test_placeholder.py  test_spellforge_bootstrap.py  test_spellforge_config.py
